# ChangeLog for mail-mta/courier
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/courier/ChangeLog,v 1.150 2011/08/02 18:44:26 hanno Exp $

  02 Aug 2011; Hanno Boeck <hanno@gentoo.org> -courier-0.59.0.ebuild,
  -files/courier-0.59.0-asneeded.patch, -courier-0.62.2.ebuild,
  -courier-0.64.1.ebuild, +courier-0.66.3.ebuild, -files/courier-init-r1:
  Remove old versions after stabilizing 0.65.2-r1.

*courier-0.66.3 (02 Aug 2011)

  02 Aug 2011; Hanno Boeck <hanno@gentoo.org> +courier-0.66.3.ebuild:
  Version bump.

  08 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> courier-0.59.0.ebuild:
  Convert from "hasq" to "has".

  02 May 2011; Jeroen Roovers <jer@gentoo.org> courier-0.65.2-r1.ebuild:
  Stable for HPPA (bug #359303).

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> courier-0.65.2-r1.ebuild:
  alpha/ia64/sparc stable wrt #359303

  19 Apr 2011; Thomas Kahle <tomka@gentoo.org> courier-0.65.2-r1.ebuild:
  x86 stable per bug 359303

  16 Apr 2011; Ulrich Mueller <ulm@gentoo.org> courier-0.59.0.ebuild,
  courier-0.62.2.ebuild, courier-0.64.1.ebuild, courier-0.65.2.ebuild,
  courier-0.65.2-r1.ebuild:
  Fix dependency on aspell, bug 363385.

  01 Apr 2011; Hanno Boeck <hanno@gentoo.org> courier-0.65.2-r1.ebuild:
  Fix various small warnings / issues with doc installation and
  webmail/webadmin use flags.

  31 Mar 2011; Eray Aslan <eras@gentoo.org> courier-0.59.0.ebuild,
  courier-0.62.2.ebuild, courier-0.64.1.ebuild, courier-0.65.2.ebuild,
  courier-0.65.2-r1.ebuild:
  remove net-mail/dovecot block introduced when removing virtual/imapd

  28 Mar 2011; Eray Aslan <eras@gentoo.org> courier-0.59.0.ebuild,
  courier-0.62.2.ebuild, courier-0.64.1.ebuild, courier-0.65.2.ebuild,
  courier-0.65.2-r1.ebuild:
  Change to new style virtual/mta - bug 360305. Remove mailwrapper support -
  bug 158003

  27 Mar 2011; Brent Baude <ranger@gentoo.org> courier-0.65.2-r1.ebuild: